packages/parser/test/tokenizer/E0010-point-invalid.txt
0.ABC
===== err =====
anonymous:1:1: SyntaxError: E0010 - Invalid float literal
1 | 0.ABC
  | ~~~~~
